[package]
name = "clockhand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.1.11", features = ["derive"] }
harvest-api = "5.0.0"
harvest-openapi = { version = "1.0.0", path = "../harvest-openapi" }
indoc = "2.0.1"
mac-notification-sys = "0.5.6"
notify = "5.1.0"
notify-rust = "4.8.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tabwriter = "1.2.1"
tokio = { version = "1.26.0", features = ["full"] }
